--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -62,7 +62,7 @@
             <a href="../services/services.html">Услуги</a>
             <a href="../contact/contact.html">Контакты</a>
             <a href="../gallary/gallary.html">Галерея</a>
-            <a href="" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+            <a href="../bag/bag.html" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
             <img  class="services__media" src="../header/search.svg" alt="поиск">
             <div class="sidebar__open">
                 <span></span>
@@ -77,7 +77,7 @@
                     <a href="../services/services.html">Услуги</a>
                     <a href="../contact/contact.html">Контакты</a>
                     <a href="../gallary/gallary.html">Галерея</a>
-                    <a href="" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+                    <a href="../bag/bag.html" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
             </div>
         </div>
