--- a/contact/contact.html
+++ b/contact/contact.html
@@ -62,7 +62,7 @@
             <a href="../services/services.html">Услуги</a>
             <a href="./contact.html">Контакты</a>
             <a href="../gallary/gallary.html">Галерея</a>
-            <a href="" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+            <a href="../bag/bag.html" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
             <img  class="services__media" src="../header/search.svg" alt="поиск">
             <div class="sidebar__open">
                 <span></span>
@@ -70,14 +70,14 @@
             <div class="sidebar">
                 <div class="sidebar__menu">
                     <div class="sidebar__row">
-                        <a href="">Каталог <div class="iconMenu"><span></span></div></a>
+                        <a href="../katalog/katalog.html">Каталог <div class="iconMenu"><span></span></div></a>
                         <p class="sidebar__close">X</p>
                     </div>
                     <a href="../aboutUs/aboutUs.html">О нас</a>
                     <a href="../services/services.html">Услуги</a>
                     <a href="./contact.html">Контакты</a>
                     <a href="../gallary/gallary.html">Галерея</a>
-                    <a href="" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+                    <a href="../bag/bag.html" ><img src="../header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
             </div>
         </div>
