--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="./services/services.html">Услуги</a>
             <a href="./contact/contact.html">Контакты</a>
             <a href="./gallary/gallary.html">Галерея</a>
-            <a href="" ><img src="./header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+            <a href="./bag/bag.html" ><img src="./header/bag.svg" alt="корзина"><div class="services__sum"></div>Корзина</a>
             <img  class="services__media" src="../header/search.svg" alt="поиск">
             <div class="sidebar__open">
                 <span></span>
@@ -77,7 +77,7 @@
                     <a href="./services/services.html">Услуги</a>
                     <a href="./contact/contact.html">Контакты</a>
                     <a href="./gallary/gallary.html">Галерея</a>
-                    <a href="" ><img src="./header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
+                    <a href="./bag/bag.html" ><img src="./header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
                 </div>
             </div>
         </div>
@@ -239,12 +239,12 @@
                     <h2>выберети мебель и оборудывание</h2>
                     <p>для создание комплекта вам нужно выбрать мебель</p>
                     <div class="fd-row">
-                        <button class="prev">←</button>
-                        <button class="next next__active">→</button>
+                        <button class="prevFurniture">←</button>
+                        <button class="nextFurniture next__active">→</button>
                     </div>
                 </div>
                 <div class="slider">
-                    <div class="slider-line">
+                    <div class="furniture-line">
                     </div>
                 </div>
         </div>
@@ -256,7 +256,7 @@
                 <button class="next">→</button>
             </div>
             <div class="slider">
-                <div class="slider-line">
+                <div class="katalog-line">
                 </div>
             </div>
             <a href="./katalog/katalog.html" class="more">посмотреть все бытовки</a>
@@ -361,5 +361,7 @@
     </footer>
     <script async src="./main.js"></script>
     <script async src="./index.js"></script>
+    <script src="./furnitureMass.js"></script>
+    <script src="./katalogMass.js"></script>
 </body>
 </html>
