--- a/bag/bag.html
+++ b/bag/bag.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
     <title>IdsStore Контакты</title>
@@ -11,6 +12,9 @@
     <link rel="stylesheet" href="../header/header.css" media="all">
     <link rel="stylesheet" href="./bag.css" media="all" >
     <link rel="stylesheet" href="../footer/footer.css"media="all">
+    <link rel="icon" href="../faviocn.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
+    <link rel="manifest" href="../manifest.json">
 </head>
 <body>
     <div class="search__modal">
@@ -30,10 +34,7 @@
     </div>
     <header>
         <div class="headerTop">
-            <a href="../index.html" class="headerTop__logo">
-                <span>IdsStore</span>
-                <span>Магазин бытовок</span>
-            </a>
+            <a href="../index.html" class="headerTop__logo">MSB</a>
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" class="search">
                 <img src="../header/search.svg" alt="поиск">
@@ -53,7 +54,7 @@
             <div class="headerTop__log">
                 <a href="" class="login">Войти</a>
                 <a href="" class="register">Зарегистрироваться</a>
-                <a href="" class="log"> <img src="../header/log.webp" alt="вход"><p>вход</p></a>
+                <a href="" class="log"> <img src="../header/log.svg" alt="вход"><p>вход</p></a>
             </div>
         </div>
         <div class="services">
@@ -96,10 +97,16 @@
                     </div>
                     <div class="input__price">
                         <p>Итого</p>
-                        <span id="price"> 18800₽</span>
+                        <span id="price">0</span>
+                    </div>                    
+                    <div class="input__discount">
+                        <p>Без скидки</p>
+                        <span id="discount">0</span>
                     </div>
-                    <p class="input__checkbox" > <input type="checkbox" class="katalog__Checkbox">c доставкой: <span> 26800₽</span></p>
-                    <p class="input__checkbox"> <input type="checkbox" class="katalog__Checkbox">самовызов: <span> 18800₽</span></p>
+                    <label class="delivery"><input type="checkbox" class="input__checkboxAdress">доставкa: <span id="delivery">договорная</span></label>
+                    <input type="text" id="adress" placeholder="укажите адресс">
+                    <label class="self-call"><input type="checkbox" class="input__checkboxMap">самовызов: <span id="self-call">0</span></label>
+                    <div id="map__yandex"><script type="text/javascript" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1de37163293f4e550481d9ca14ec396e5a467508c7cd738b2b7f8c1037132ff8&amp;width=100%25&amp;height=200&amp;lang=ru_RU&amp;scroll=true"></script></div>
                     <input type="tel" id="phone" placeholder="Номер телефона">
                     <button id="order">Оформить заказ</button>
                 </div>
@@ -167,10 +174,7 @@
             </div>
             <div class="basement__content">
                 <div class="d-col">
-                    <a href="../index.html" class="basement__logo">
-                        <span>IdsStore</span>
-                        <span>Магазин бытовок</span>
-                    </a>
+                    <a href="./index.html" class="basement__logo">MSB</a>
                     <div class="block">
                         <a href="#" class="prava">2022 все права защищены</a>
                         <a href="#" class="prava">пользовательское соглашение</a>
