--- a/cubinsForlive/cubinsForlive.html
+++ b/cubinsForlive/cubinsForlive.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
     <title>IdsStore Контакты</title>
@@ -11,6 +12,9 @@
     <link rel="stylesheet" href="../header/header.css" media="all">
     <link rel="stylesheet" href="../cubinsfordress/cubinsfordress.css" media="all" >
     <link rel="stylesheet" href="../footer/footer.css"media="all">
+    <link rel="icon" href="../faviocn.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
+    <link rel="manifest" href="../manifest.json">
 </head>
 <body>
     <div class="search__modal">
@@ -30,10 +34,7 @@
     </div>
     <header>
         <div class="headerTop">
-            <a href="../index.html" class="headerTop__logo">
-                <span>IdsStore</span>
-                <span>Магазин бытовок</span>
-            </a>
+            <a href="../index.html" class="headerTop__logo">MSB</a>
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" class="search">
                 <img src="../header/search.svg" alt="поиск">
@@ -53,7 +54,7 @@
             <div class="headerTop__log">
                 <a href="" class="login">Войти</a>
                 <a href="" class="register">Зарегистрироваться</a>
-                <a href="" class="log"> <img src="../header/log.webp" alt="вход"><p>вход</p></a>
+                <a href="" class="log"> <img src="../header/log.svg" alt="вход"><p>вход</p></a>
             </div>
         </div>
         <div class="services">
@@ -120,28 +121,14 @@
                     </div>
                     <div class="fd-row">
                         <div class="quantity_inner">		
-                            <button class="bt_minus">
-                              <p>-</p>
-                            </button>
-                            <div class="fd-col">
-                                <p>количество</p>
-                                <input type="text" value="1" size="2" class="quantity" />
-                            </div>
-                            <button class="bt_plus">
-                               <p>+</p>
-                            </button>
+                            <button class="bt_minus">-</button>
+                            <label class="fd-col">количество<input type="text" value="1" size="2" class="quantity" /></label>
+                            <button class="bt_plus">+</button>
                         </div>
                         <div class="quantity_inner">		
-                            <button class="bt_minusMonth">
-                              <p>-</p>
-                            </button>
-                            <div class="fd-col">
-                                <p>месяцев</p>
-                                <input type="text" value="1" size="2" class="quantity" />
-                            </div>
-                            <button class="bt_plusMonth">
-                                <p>+</p>
-                             </button>
+                            <button class="bt_minusMonth">-</button>
+                            <label class="fd-col">месяцев<input type="text" value="1" size="2" class="quantity" /></label>
+                            <button class="bt_plusMonth">+</button>
                         </div>
                     </div>
                     <button class="more">добавить услугу</button>
@@ -167,8 +154,8 @@
                 <h2>выберети мебель и оборудывание</h2>
                 <p>для создание комплекта вам нужно выбрать мебель</p>
                 <div class="fd-row">
-                    <button class="prev">←</button>
-                    <button class="next next__active">→</button>
+                    <button class="prevFurniture">←</button>
+                    <button class="nextFurniture next__active">→</button>
                 </div>
             </div>
             <div class="slider">
@@ -238,10 +225,7 @@
             </div>
             <div class="basement__content">
                 <div class="d-col">
-                    <a href="../index.html" class="basement__logo">
-                        <span>IdsStore</span>
-                        <span>Магазин бытовок</span>
-                    </a>
+                    <a href="./index.html" class="basement__logo">MSB</a>
                     <div class="block">
                         <a href="#" class="prava">2022 все права защищены</a>
                         <a href="#" class="prava">пользовательское соглашение</a>
