--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Контакты</title>
+    <title>MSB О компании</title>
     <link rel="stylesheet" href="../css/general.css" media="all">
     <link rel="stylesheet" href="../css/header/header.css" media="all">
     <link rel="stylesheet" href="../css/aboutUs/aboutUs.css" media="all" >
@@ -34,7 +34,7 @@
     </div>
     <header>
         <div class="headerTop">
-            <a href="./index.html" class="headerTop__logo">MSB</a>
+            <a href="../index.html" class="headerTop__logo">MSB</a>
             <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" class="search">
                 <img src="../header/search.svg" alt="поиск">
