--- a/gallary/gallary.html
+++ b/gallary/gallary.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Контакты</title>
+    <title>MSB Галерея</title>
     <link rel="stylesheet" href="../css/general.css" media="all">
     <link rel="stylesheet" href="../css/header/header.css" media="all">
     <link rel="stylesheet" href="../css/gallary/galary.css" media="all" >
