--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta name="theme-color" content="white">
      <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore-Магазин бытовок</title>
-    <link rel="stylesheet" href="./css/general.css" media="screen and (min-width:320px)">
-    <link rel="stylesheet" href="./css/header/header.css" media="screen and (min-width:320px)">
-    <link rel="stylesheet" href="./css/main/main.css" media="screen and (min-width:320px)" >
-    <link rel="stylesheet" href="./css/footer/footer.css" media="screen and (min-width:320px)">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./iconPWA/logo192x192.svg">
-    <link rel="manifest" href="./manifest.json">
+    <title>MSB-Магазин бытовок</title>
+    <link async rel="stylesheet" href="./css/main/main.css" media="screen and (min-width:320px)" >
+    <link async rel="stylesheet" href="./css/footer/footer.css" media="screen and (min-width:320px)">
+    <link async rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link async rel="apple-touch-icon" href="./iconPWA/logo192x192.svg">
+    <link async rel="manifest" href="./manifest.json">
+    <link async rel="stylesheet" href="./css/header/header.css" media="screen and (min-width:320px)">
 </head>
 <body>
     <div class="search__modal">
@@ -64,7 +63,7 @@
             <a href="./contact/contact.html">Контакты</a>
             <a href="./gallary/gallary.html">Галерея</a>
             <a href="./bag/bag.html" ><img src="./header/bag.svg" alt="корзина"><div class="services__sum"><p>0</p></div>Корзина</a>
-            <img  class="services__media" src="../header/search.svg" alt="поиск">
+            <img  class="services__media" src="header/search.svg" alt="поиск">
             <div class="sidebar__open">
                 <span></span>
             </div>
@@ -195,7 +194,7 @@
         <div class="line"></div>
         <div class="fd-row">
             <div class="content">
-                <h3>IdsStore</h3>
+                <h3>MSB</h3>
                 <h2>Cобери свой идеальный комплект бытовки</h2>
                 <p>мы предлагаем собрать комплект мебели и обарудывания для твоей бытовки</p>
                 <select class="choose__more">
@@ -344,7 +343,7 @@
         </div>
     </footer>
     <script async src="./main.js"></script>
-    <script async src="./katalogMass.js"></script>
+    <script  src="./katalogMass.js"></script>
     <script async src="./index.js"></script>
     <script async src="./furnitureMass.js"></script>
 </body>
