--- a/katalog/katalog.html
+++ b/katalog/katalog.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Каталог</title>
+    <title>MSB Каталог</title>
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/header/header.css">
     <link rel="stylesheet" href="../css/katalog/katalog.css">
@@ -116,7 +116,7 @@
                     </div>
                     <div class="katalog-name">
                         <h2>Рейтинг покупателей</h2>
-                        <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки раздевалка">Бытовки раздевалка</label>
+                        <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки раздевалки">Бытовки раздевалки</label>
                         <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки для проживания">Бытовки для проживания</label>
                         <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки c душем">Бытовки c душем</label>
                         <label> <input type="checkbox" class="katalog__Checkbox" value="Бытовки под склад">Бытовки под склад</label>
@@ -241,7 +241,7 @@
     </footer>
     <script async src="../main.js"></script>
     <script async  src="../cubinsMoreMass.js"></script>
-    <script async src="../katalogMass.js"></script>
-    <script async src="./katalog.js"></script>
+    <script src="../katalogMass.js"></script>
+    <script src="./katalog.js"></script>
 </body>
 </html>
