--- a/bag/bag.html
+++ b/bag/bag.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Контакты</title>
+    <title>MSB Корзина</title>
     <link rel="stylesheet" href="../css/general.css" media="all">
     <link rel="stylesheet" href="../css/header/header.css" media="all">
     <link rel="stylesheet" href="../css/bag/bag.css" media="all" >
-    <link rel="stylesheet" href="../footer/footer.css"media="all">
+    <link rel="stylesheet" href="../css/footer/footer.css"media="all">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
     <link rel="manifest" href="../manifest.json">
@@ -59,7 +59,7 @@
         </div>
         <div class="services">
             <a href="../katalog/katalog.html">Каталог <div class="menu"><span></span></div></a>
-            <a href="./aboutUs.html">О нас</a>
+            <a href="../aboutUs/aboutUs.html">О нас</a>
             <a href="../services/services.html">Услуги</a>
             <a href="../contact/contact.html">Контакты</a>
             <a href="../gallary/gallary.html">Галерея</a>
@@ -74,7 +74,7 @@
                         <a href="../katalog/katalog.html">Каталог <div class="iconMenu"><span></span></div></a>
                         <p class="sidebar__close">X</p>
                     </div>
-                    <a href="./aboutUs.html">О нас</a>
+                    <a href="../aboutUs/aboutUs.html">О нас</a>
                     <a href="../services/services.html">Услуги</a>
                     <a href="../contact/contact.html">Контакты</a>
                     <a href="../gallary/gallary.html">Галерея</a>
@@ -191,7 +191,7 @@
                 </div>
                 <div class="d-col">
                     <h4>Информация</h4>
-                    <a href="./aboutUs.html">О нас</a>
+                    <a href="../aboutUs/aboutUs.html">О нас</a>
                     <a href="../contact/contact.html">контакты</a>
                     <a href="../services/services.html">услуги</a>
                     <a href="../gallary/gallary.html">галерея</a>
