--- a/cubinsForbath/cubinsForbath.html
+++ b/cubinsForbath/cubinsForbath.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Контакты</title>
+    <title>MSB бытовки с душем</title>
     <link rel="stylesheet" href="../css/general.css" media="screen and (min-width:320px)">
     <link rel="stylesheet" href="../css/header/header.css" media="screen and (min-width:320px)">
     <link rel="stylesheet" href="../css/cubinsfordress/cubinsfordress.css" media="screen and (min-width:320px)" >
