--- a/cubinsForwork/cubinsForwork.html
+++ b/cubinsForwork/cubinsForwork.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Контакты</title>
+    <title>MSB бытовки прорабские</title>
     <link rel="stylesheet" href="../css/general.css" media="all">
     <link rel="stylesheet" href="../css/header/header.css" media="all">
     <link rel="stylesheet" href="../css/cubinsfordress/cubinsfordress.css" media="all" >
