--- a/cubinsfordress/cubinsfordress.html
+++ b/cubinsfordress/cubinsfordress.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="white">
     <!-- придумать описание страницы -->
     <meta name="description" content="придумать описание страницы">
-    <title>IdsStore Контакты</title>
-    <link rel="stylesheet" href="../css/css/general.css" media="screen and (min-width:320px)">
-    <link rel="stylesheet" href="../css/css/header/header.css" media="screen and (min-width:320px)">
-    <link rel="stylesheet" href="../css/css/cubinsfordress/cubinsfordress.css" media="screen and (min-width:320px)" >
-    <link rel="stylesheet" href="../css/css/footer/footer.css"media="screen and (min-width:320px)">
+    <title>MSB бытовки раздевалки</title>
+    <link rel="stylesheet" href="../css/general.css" media="screen and (min-width:320px)">
+    <link rel="stylesheet" href="../css/header/header.css" media="screen and (min-width:320px)">
+    <link rel="stylesheet" href="../css/cubinsfordress/cubinsfordress.css" media="screen and (min-width:320px)" >
+    <link rel="stylesheet" href="../css/footer/footer.css"media="screen and (min-width:320px)">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../iconPWA/logo192x192.svg">
     <link rel="manifest" href="../manifest.json">
